add_subdirectory(Fpu)
add_subdirectory(Mcan)
add_subdirectory(Nvic)
add_subdirectory(Pio)
add_subdirectory(Pmc)
add_subdirectory(Rstc)
add_subdirectory(Scb)
add_subdirectory(Sdramc)
add_subdirectory(Startup)
add_subdirectory(Systick)
add_subdirectory(Stubs)
add_subdirectory(SystemConfig)
add_subdirectory(Tic)
add_subdirectory(Uart)
add_subdirectory(Utils)
add_subdirectory(Wdt)
